2005-01-18  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* gst/qtdemux/qtdemux.c: (gst_qtdemux_change_state),
	(gst_qtdemux_add_stream):
	  Fix two memleaks.

2005-01-18  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* ext/faad/gstfaad.c: (gst_faad_srcgetcaps):
	  Argh...

2005-01-17  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* ext/faad/gstfaad.c: (gst_faad_srcgetcaps):
	  Fix off-by-one bug. Fixes warnings during playback of sincity.mp4
	  when fixating to six channels in Totem.

2005-01-17  Tim-Philipp Müller  <tim at centricular dot net>

	* ext/dvdread/dvdreadsrc.c: (get_next_cell_for):
	  Fix compile warnings on Solaris 10 buildbot

2005-01-17  Tim-Philipp Müller  <tim at centricular dot net>

	* ext/dvdread/dvdreadsrc.c: (_read):
	  Don't read beyond the last cell in a chapter (fixes 
	  invalid memory access)

2005-01-17  Tim-Philipp Müller  <tim at centricular dot net>

	* ext/dvdread/stream_labels.c:
	(dvdreadsrc_get_audio_stream_labels):
	  Use NULL for an empty GList instead of g_list_alloc(); fix 
	  memory leaks; s/LCPM/LPCM/; use g_strdup_printf() instead 
	  of GString (easier to bulk free later)

2005-01-17  Gergely Nagy  <algernon@bonehunter.rulez.org>

	Reviewed by:  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* gst/ffmpegcolorspace/gstffmpegcodecmap.c:
	(gst_ffmpeg_pixfmt_to_caps):
	  Fix BGRA32 caps (#164209).

2005-01-17  Gergely Nagy  <algernon@bonehunter.rulez.org>

	Reviewed by:  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* gst/ffmpegcolorspace/gstffmpegcodecmap.c:
	(gst_ffmpeg_caps_to_pixfmt):
	  alpha_mask can be RGBA/ABGR. Fixes #164265.

2005-01-17  Francis Labonte  <francis_labonte@hotmail.com>

	Reviewed by:  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* ext/mpeg2dec/gstmpeg2dec.c: (crop_buffer),
	(gst_mpeg2dec_alloc_buffer):
	* ext/mpeg2dec/gstmpeg2dec.h:
	  Crop if decoding size is not the actual image size (#163676).

2005-01-17  Steve Baker  <steve@stevebaker.org>
